[package]
name = "form-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
base64 = "0.22.0"
dotenv = "0.15.0"
http-body-util = "0.1.1"
native-tls = "0.2.11"
serde = "1.0.197"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

