[package]
name = "form-forwarder"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

[dependencies]
axum = "0.7.5"
base64 = "0.22.0"
dotenv = "0.15.0"
http-body-util = "0.1.1"
native-tls = "0.2.11"
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-pki-types = "1.4.1"
serde = "1.0.197"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
webpki-roots = "0.26.1"

